Fix source-selector being blocked on mobile (#5229)
Small CSS change to allow the `source-selector` to be brought to the front of the controls to allow people to select which source they would like.

--- a/ui/v2.5/src/components/ScenePlayer/styles.scss
+++ b/ui/v2.5/src/components/ScenePlayer/styles.scss
@@ -360,6 +360,10 @@ $sceneTabWidth: 450px;
         height: 1.4em;
         width: 1.4em;
       }
+
+      .vjs-source-selector .vjs-menu {
+        z-index: 9999;
+      }
     }
 
     .vjs-menu-button-popup .vjs-menu {
